# OpenCV_catkin_pkg

./: README.md
OpenCV_2/opencv2_catkin/: CMakeLists.txt  README.md  package.xml
OpenCV_2/opencv2_catkin/cmake/: ExternalProject_OpenCV_2.4.13.5.cmake
OpenCV_2/test_opencv/: CMakeLists.txt  README.md  package.xml
OpenCV_2/test_opencv/src/: detect_edges.cpp  print_version.cpp  test_sift.cpp
OpenCV_3/opencv3_catkin/: CMakeLists.txt  README.md  package.xml
OpenCV_3/opencv3_catkin/cmake/: ExternalProject_OpenCV_3.4.2.cmake  ExternalProject_OpenCV_3.4.6.cmake
OpenCV_3/test_opencv/: CMakeLists.txt  README.md  package.xml
OpenCV_3/test_opencv/src/: detect_edges.cpp  test_sift.cpp
OpenCV_4/opencv4_catkin/: CMakeLists.txt  README.md  package.xml
OpenCV_4/opencv4_catkin/cmake/: ExternalProject_OpenCV_4.1.0.cmake
OpenCV_4/test_opencv/: CMakeLists.txt  README.md  package.xml
OpenCV_4/test_opencv/src/: print_version.cpp
