<?xml version="1.0"?>
<package>
  <name>opencv2_catkin</name>
  <version>2.4.13</version>
  <description>OpenCV 2 in a catkin package</description>
  <maintainer email="dbworth@gmail.com">David Butterworth</maintainer>
  <author>David Butterworth</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

</package>
