<?xml version="1.0"?>
<package>
  <name>opencv3_catkin</name>
  <version>3.4.6</version>
  <description>opencv3_catkin</description>
  <maintainer email="dbworth@gmail.com">David Butterworth</maintainer>
  <author>David Butterworth</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

</package>
