<?xml version="1.0"?>
<package>
  <name>opencv4_catkin</name>
  <version>4.1.0</version>
  <description>opencv4_catkin</description>
  <maintainer email="dbworth@gmail.com">David Butterworth</maintainer>
  <author>David Butterworth</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

</package>
